--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "quickstart-lib",
+  "name": "simpletoast",
   "version": "1.0.0",
   "description": "Library QuickStart package.json from the documentation, supplemented with testing support",
-  "main": "./bundles/quickstart-lib.umd.js",
-  "module": "./quickstart-lib.es5.js",
-  "es2015": "./quickstart-lib.js",
-  "typings": "./quickstart-lib.d.ts",
+  "main": "./bundles/simpletoast.umd.js",
+  "module": "./simpletoast.es5.js",
+  "es2015": "./simpletoast.js",
+  "typings": "./simpletoast.d.ts",
   "author": "",
   "license": "MIT",
   "repository": {},
@@ -74,5 +74,6 @@
     "tslint": "^4.4.2",
     "typescript": "~2.3.0",
     "zone.js": "^0.8.4"
-  }
+  },
+  "dependencies": {}
 }
